# Viola-SV

./: .gitignore  .python-version  .readthedocs.yaml  Dockerfile  MANIFEST.in  Pipfile  README.md  README.rst  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: testing.yml
doc/: conf.py  index.rst
doc/source/: modules.rst  sgt.io.rst
doc_for_developer/: Development.md
docs/: Makefile  bedpe_generation.rst  conf.py  fragile_site.hg19.bed  index.rst  quickstart.rst  requirements.txt  script.sh  sgt.utils.rst  signature_analysis.rst  tutorial.manta.vcf  tutorial.vcf  usecases.rst
docs/_static/: microhomology_manta.vcf  tutorial.vcf
docs/reference/: bedpe.rst  index.rst  io.rst  ml.rst  multi_bedpe.rst  multi_vcf.rst  sgt_core.rst  sgt_simple.rst  utilities.rst  vcf.rst
docs/release_notes/: index.rst  release_notes_1.0.0_stable.rst  release_notes_1_0_0_stable.rst  release_notes_1_0_1.rst  release_notes_1_0_2.rst  release_notes_1_1_0.rst
docs/resources/: pcawg
docs/sources/: test.rst
docs/userguide/: annotation.rst  bedpe_generation.rst  cli.rst  data_structure.rst  filtering.rst  index.rst  merge.rst  sv_position_specification.rst
examples/bedpe/: merge_test1.bedpe
examples/demo/: signature_analysis_demo.ipynb
resoreces/: ~$SV_parser.pptx
resources/: SV_parser.pptx  test.ipynb
sv_parser/: .__init__.py.swp  __init__.py
sv_parser_env/: pyvenv.cfg
tests/: SV_parser.pptx  conftest.py  test.py  test_1.py  test_version.py
(+1178 files in other folders)
