[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "Viola-SV"
requires-python = ">= 3.6"
dependencies = [
    "pandas >= 1.1.5",
    "intervaltree >= 3.1.0",
    "biopython >= 1.79",
    "scikit-learn >= 0.24.2",
    "scipy >= 1.5.4",
    "click >= 8.0.4",
    "pydantic == 2.6.4",
]
authors = [
    {name = "SUGITA Itsuki", email = "i-sugita@medopstech.com"},
    {name = "MATSUYAMA Shohei"},
    {name = "DOBASHI Hiroki"},
]
license = {file = "LICENSE"}
description = "SV signature analysis tool with custom SV type"
readme = {file = "README.rst", content-type = "text/x-rst"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["bioinformatics"]


[project.urls]
Repository = "https://github.com/dermasugita/Viola-SV"
Documentation = "https://viola-sv.readthedocs.io"